# schemamind

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: auth.py  config.py  database.py  main.py  metrics.py  schemas.py
app/routers/: auth.py  databases.py  models.py  query.py  settings.py
app/services/: model_lister.py  retriever.py  schema_extractor.py  sql_executor.py  sql_generator.py  sql_validator.py  vectorizer.py
frontend/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppLayout.tsx  Button.tsx  Card.tsx  DataTable.tsx  Input.tsx  PageHeader.tsx  ProtectedRoute.tsx  ResultTable.tsx  Toast.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  DatabasesPage.tsx  LoginPage.tsx  QueryPage.tsx  RegisterPage.tsx  SettingsPage.tsx
monitoring/grafana/dashboards/: schemamind.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
